# WildSeed

./: .dockerignore  .gitignore  EXECUTION_PLAN.md  README.md  REALISM_PLAN.md  SPIKE_BRIEF.md  SPIKE_FINDINGS.md  TERRAIN_GEN_PLAN.md  pyproject.toml
assets/: manifest.lock.yaml  manifest.yaml
configs/: default.yaml  realism.yaml  rig_cinematic.yaml  rig_dataset.yaml  sim-fast.yaml
docker/: Dockerfile  Dockerfile.dev  Dockerfile.egl  Dockerfile.ros  constraints.txt  docker-compose.yml  ros_gz_bridge.yaml
docs/: DEMO_REALISM_V2_REPORT.md  GROUND_CLUTTER.md  REALISTIC_DEMOS_PLAN.md  SCENARIOS.md  SENSOR_RIG_PLAN.md  TERRAIN_GENERATOR.md  TUTORIAL.md  VIO_BENCH.md  baseline_metrics.md
loop/: STATE.md
spike/: ASSET_REGISTRY.md  build_assets.py  build_scenarios.py  compose_catalog.py  fetch_polyhaven.py  import_gltf.py  make_assets.py  merge_world.py  model_probe.py  normalize_blend.py  quickmetric.py  regen_galleries.py  render_catalog.py  terrain_scene.py
src/forest3d/cli/: ground.py  main.py  scenario.py  terraingen.py
src/forest3d/config/: schema.py
src/forest3d/core/: forest.py  ground.py  scenario.py  terraingen.py
src/wildseed/: __init__.py  __main__.py
src/wildseed/cli/: __init__.py  assetgen.py  convert.py  fly.py  generate.py  ground.py  launch.py  main.py  randomize.py  record.py  rig.py  scenario.py  terrain.py  terraingen.py
src/wildseed/config/: __init__.py  loader.py  schema.py
src/wildseed/core/: __init__.py  assetgen.py  converter.py  fly.py  forest.py  ground.py  record.py  rig.py  scenario.py  terrain.py  terraingen.py  texrand.py
src/wildseed/utils/: __init__.py  logging.py  progress.py
tests/: test_assetgen.py  test_category_config.py  test_density_map.py  test_fly.py  test_ground_config.py  test_record.py  test_rig.py  test_scenario.py  test_seed.py  test_terraingen.py  test_texrand.py
tools/: ASSET_REGISTRY.md  README.md  build_assets.py  build_scenarios.py  capture_cam.py  capture_multi.py  capture_sensors.py  compare.py  compose_catalog.py  fetch_polyhaven.py  heightmap_relief.py  hero_scene.py  import_gltf.py  make_assets.py  make_ground.py  merge_world.py  model_probe.py  normalize_blend.py  normalize_island_tree.py  quickmetric.py  record_demo.sh  regen_galleries.py  render_catalog.py  scenario_gallery.py  terrain_gallery.py  terrain_scene.py  verify_dynamic.py  vio_bench.py  vio_validate.py
