[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wildseed"
version = "0.2.0"
description = "Reproducible wilderness for robot perception — seeded, randomized Gazebo worlds for VIO/LIO benchmarking"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.8"
authors = [
    {name = "Ricardo de Azambuja"}
]
keywords = ["gazebo", "robotics", "simulation", "terrain", "forest", "dem", "3d", "ros", "vio", "lio", "slam", "benchmark", "procedural"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
]

# Library deps use lower bounds for install-friendliness, but with upper caps on the
# packages whose major versions have broken us before — numpy 2.x breaks the system
# GDAL ABI, pydantic 3.x / click 9.x would be breaking majors. For a *fully* frozen,
# reproducible install (the Docker image), see docker/constraints.txt which hard-pins
# every version with `==`.
dependencies = [
    "numpy>=1.21.0,<2",
    "scipy>=1.7.0",
    "numpy-stl>=2.16.0",
    "Pillow>=9.0.0",
    "PyYAML>=6.0",
    "click>=8.0.0,<9",
    "rich>=12.0.0",
    "pydantic>=2.0.0,<3",
]

[project.optional-dependencies]
dev = [
    "black>=22.3.0",
    "pylint>=2.12.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
wildseed = "wildseed.cli.main:main"

[project.urls]
Homepage = "https://github.com/ricardodeazambuja/WildSeed"
Documentation = "https://github.com/ricardodeazambuja/WildSeed#readme"
Repository = "https://github.com/ricardodeazambuja/WildSeed.git"
Issues = "https://github.com/ricardodeazambuja/WildSeed/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wildseed = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=wildseed --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
